# ASAGI

./: CMakeLists.txt  asagi.cpp  asagi_f90.cpp  asagi_f90.h
allocator/: numaallocator.h
grid/: CMakeLists.txt  adaptivegridcontainer.cpp  adaptivegridcontainer.h  grid.h  gridcontainer.cpp  gridcontainer.h  numadiststaticgrid.cpp  numadiststaticgrid.h  numagrid.cpp  numagrid.h  numagridcontainer.cpp  numagridcontainer.h  numalocalcachegrid.cpp  numalocalcachegrid.h  numalocalstaticgrid.cpp  numalocalstaticgrid.h  simplegridcontainer.cpp  simplegridcontainer.h  threadhandler.cpp  threadhandler.h
grid/numa/: CMakeLists.txt  numadiststaticgrid.cpp  numadiststaticgrid.h  numagrid.cpp  numagrid.h  numagridcontainer.cpp  numagridcontainer.h  numalocalcachegrid.cpp  numalocalcachegrid.h  numalocalstaticgrid.cpp  numalocalstaticgrid.h  numasimplegridcontainer.cpp  numasimplegridcontainer.h  threadhandler.cpp  threadhandler.h
include/: asagi.f90  asagi.h
tests/: CMakeLists.txt  grid1dnuma.cpp  grid2d.cpp  grid2dnuma.cpp  grid3dnuma.cpp  prepare.cpp
